Fix styling of pdf icon on mobile

--- a/src/main.styl
+++ b/src/main.styl
@@ -51,3 +51,8 @@ li
 .pdf
   background url(https://dan.herbert.io/pdf-icon.svg) center right/18px no-repeat
   padding-right 22px
+
+@media (max-width: 475px)
+  .pdf
+    background-size: 14px;
+    padding-right: 18px;
